release to release.  It is cumulative, with the most recent changes listed
first.  The most up-to-date version is in the civet git repository
redmine:/var/git/civet.git

Version 1.7.6
-------------
Bug fixes
 - Fix so relative paths in tool_search_path pipeline attribute are treated as
   relative to the XML directory, not the current working directory

Features
 - Add optional "path" attribute for <pipeline> and <tool> (in tool xml file)
   tags.  These paths will be added to the PATH after loading modulefiles

Version 1.7.5
-------------
Bug fixes
 - abort_pipeline bash function writes status file first, before issuing 
   all of the qdel commands.  This is in case the qdels hang and cause 
   the epilogue to time out.

Features
 - Batch scripts now include as a comment the path to the tool XML file used to
   generate the script.
 - Batch scripts now include #PBS directives for stdout/stderr naming used
   during submission.
 - Log the PATH in the step's 'run log'
 - Reset epilogue.sh permissions before exiting job (if a user changes the
   permissions of epilogue.sh before the pipeline finishes, they could cause
   it to not be executed by Torque)

Version 1.7.4
-------------
Bug fixes
 - Specify filename for torque stderr file, Torque had problems in certain
   cases if we only provide the directory and not filename for stderr.

Version 1.7.3
-------------
Bug fixes
 - civet_status now follows symlinks when scanning for log directories
 - civet_status does not report success if the pipeline_batch_id_list.txt is
   empty, now reports that there was a submission failure
 - Detect conditions where Torque stdout/stderr files will get created with a
   group that the user does not belong to, which prevents the user job epilogue
   from executing.

Features
 - Add new "pipeline_root" attribute for <dir> tag.  If true, Civet will set
   the directory to the pipeline's XML root directory.
 - datestamp_prepend can now be combined with append and datestamp_append tags